istio/ambient/sandwitch-istio/dumps/waypoint.r.yaml
- ignorePortInHostMatching: true
  maxDirectResponseBodySizeBytes: 1048576
  name: http.8000
  validateClusters: false
  virtualHosts:
  - domains:
    - httpbin.default.svc.cluster.local
    includeRequestAttemptCount: true
    name: httpbin.default.svc.cluster.local:8000
    routes:
    - decorator:
        operation: httpbin.default.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        prefix: /
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/default/virtual-service/httpbin-httproute-0-istio-autogenerated-k8s-gateway
      name: default.httpbin-httproute.0
      responseHeadersToAdd:
      - header:
          key: traversed-waypoint
          value: simple-http-gateway
      route:
        cluster: outbound|8000||httpbin.default.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
  - domains:
    - httpbin.default.svc
    includeRequestAttemptCount: true
    name: httpbin.default.svc:8000
    routes:
    - decorator:
        operation: httpbin.default.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        prefix: /
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/default/virtual-service/httpbin-httproute-13-istio-autogenerated-k8s-gateway
      name: default.httpbin-httproute.0
      responseHeadersToAdd:
      - header:
          key: traversed-waypoint
          value: simple-http-gateway
      route:
        cluster: outbound|8000||httpbin.default.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
  - domains:
    - httpbin.default
    includeRequestAttemptCount: true
    name: httpbin.default:8000
    routes:
    - decorator:
        operation: httpbin.default.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        prefix: /
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/default/virtual-service/httpbin-httproute-6-istio-autogenerated-k8s-gateway
      name: default.httpbin-httproute.0
      responseHeadersToAdd:
      - header:
          key: traversed-waypoint
          value: simple-http-gateway
      route:
        cluster: outbound|8000||httpbin.default.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
  - domains:
    - httpbin
    includeRequestAttemptCount: true
    name: httpbin:8000
    routes:
    - decorator:
        operation: httpbin.default.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        prefix: /
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/default/virtual-service/httpbin-httproute-11-istio-autogenerated-k8s-gateway
      name: default.httpbin-httproute.0
      responseHeadersToAdd:
      - header:
          key: traversed-waypoint
          value: simple-http-gateway
      route:
        cluster: outbound|8000||httpbin.default.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
- virtualHosts:
  - domains:
    - '*'
    name: backend
    routes:
    - match:
        prefix: /healthz/ready
      route:
        cluster: agent
- virtualHosts:
  - domains:
    - '*'
    name: backend
    routes:
    - match:
        prefix: /stats/prometheus
      route:
        cluster: prometheus_stats
